Add react-icons package and admin page ui

--- a/src/components/generic-components/PIPButton/index.module.scss
+++ b/src/components/generic-components/PIPButton/index.module.scss
@@ -14,4 +14,13 @@
       transform: scale(1.05);
     }
   }
+
+  &[aria-disabled="true"] {
+    cursor: not-allowed !important;
+    opacity: 0.5;
+
+    &:hover {
+      transform: none;
+    }
+  }
 }
