--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -9,6 +9,8 @@ $breakpoint-xxl: 1400px;
 
 /* Colors */
 
+$whatsapp-green: #25d366;
+
 $white-100: #ffffff;
 $white-200: #fdfeff;
 $white-300: #fcfdff;
@@ -68,3 +70,23 @@ $orangejam-600: #D66B2B;
 $orangejam-700: #C55925;
 $orangejam-800: #B4471F;
 $orangejam-900: #A33519;
+
+$info-yellow-100: #FFF8E5;
+$info-yellow-200: #FFF1CC;
+$info-yellow-300: #FFEAB2;
+$info-yellow-400: #FFE399;
+$info-yellow-500: #FFD66B;
+$info-yellow-600: #E6BF5F;
+$info-yellow-700: #CCAA53;
+$info-yellow-800: #B39747;
+$info-yellow-900: #99823B;
+
+$danger-red-100: #FFE5E5;
+$danger-red-200: #FFCCCC;
+$danger-red-300: #FFB2B2;
+$danger-red-400: #FF9999;
+$danger-red-500: #FF6666;
+$danger-red-600: #E65C5C;
+$danger-red-700: #CC5252;
+$danger-red-800: #B34747;
+$danger-red-900: #993D3D;
