--- a/src/pages/admin/index.module.scss
+++ b/src/pages/admin/index.module.scss
@@ -5,6 +5,7 @@
 
   .sidebar {
     @include flex(column);
+    min-width: 300px;
     width: 300px;
     height: 100vh;
 
@@ -127,8 +128,129 @@
   .content {
     @include flex(column);
     flex: 1;
-    padding: 20px;
 
     background-color: $white-400;
+
+    .header {
+      @include flex(row);
+      align-items: center;
+      justify-content: space-between;
+
+      margin-bottom: 20px;
+
+      background-color: $white-400;
+      box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+
+      .searchBox {
+        @include flex(row);
+        align-items: center;
+        justify-content: flex-start;
+        padding: 10px;
+        gap: 10px;
+
+        .searchInput {
+          @include inter-body2;
+
+          width: 400px;
+          height: 30px;
+          padding: 5px 10px;
+
+          border: 2px solid $orangejam-100;
+          border-radius: 5px;
+
+          transition: all 0.2s ease-in-out;
+
+          &:focus {
+            outline: none;
+            border: 2px solid $orangejam-500;
+          }
+        }
+
+        .searchButton {
+          @include flex(row);
+          align-items: center;
+          justify-content: center;
+          padding: 5px 10px;
+          gap: 10px;
+
+          cursor: pointer;
+          transition: all 0.2s ease-in-out;
+
+          background-color: $orangejam-100;
+          border-radius: 5px;
+
+          &:hover {
+            background-color: $orangejam-200;
+          }
+
+          .icon {
+            width: 20px;
+            height: 20px;
+
+            fill: $orangejam-500;
+          }
+        }
+      }
+
+      .profileBox {
+        @include flex(row);
+        align-items: center;
+        justify-content: flex-start;
+        padding: 10px 40px;
+        gap: 10px;
+        height: 100%;
+
+        background-color: $orangejam-100;
+
+        .profileImage {
+          position: relative;
+          width: 42px;
+          height: 42px;
+
+          border-radius: 50%;
+          border: 2px solid $orangejam-500;
+
+          img {
+            width: 100%;
+            height: 100%;
+
+            border-radius: 50%;
+          }
+        }
+
+        .profileText {
+          white-space: nowrap;
+          @include inter-body1;
+
+          color: $orangejam-500;
+        }
+
+        .settingsButton {
+          @include flex(row);
+          align-items: center;
+          justify-content: center;
+          padding: 5px 10px;
+          gap: 10px;
+          margin-left: 30px;
+
+          cursor: pointer;
+          transition: all 0.2s ease-in-out;
+
+          background-color: $orangejam-500;
+          border-radius: 5px;
+
+          &:hover {
+            background-color: $orangejam-600;
+          }
+
+          .icon {
+            width: 20px;
+            height: 20px;
+
+            fill: $orangejam-100;
+          }
+        }
+      }
+    }
   }
 }
