--- a/src/pages/admin/sections/SectionVeterinaryList/index.module.scss
+++ b/src/pages/admin/sections/SectionVeterinaryList/index.module.scss
@@ -70,7 +70,7 @@
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 
     .tableHeader {
-      @include grid(9, 1);
+      @include grid(7, 1);
       align-items: center;
       gap: 10px;
       padding: 10px;
@@ -92,8 +92,24 @@
       border-radius: 5px;
       background-color: $white-100;
 
+      .tableRowPhoto {
+        position: relative;
+
+        width: 48px;
+        height: 48px;
+
+        border-radius: 5px;
+        overflow: hidden;
+
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
+      }
+
       .tableRow {
-        @include grid(9, 1);
+        @include grid(7, 1);
         align-items: center;
         gap: 20px;
         padding-block: 10px;
