Update styling for layout

--- a/src/pages/admin/index.module.scss
+++ b/src/pages/admin/index.module.scss
@@ -2,8 +2,15 @@
 
 .container {
   @include flex(row);
+  position: relative;
+  height: 100vh;
 
   .sidebar {
+    position: sticky;
+    top: 0;
+    left: 0;
+    z-index: 100;
+
     @include flex(column);
     min-width: 300px;
     width: 300px;
@@ -125,18 +132,21 @@
     }
   }
 
-  .content {
+  .main {
     @include flex(column);
     flex: 1;
 
     background-color: $white-400;
 
     .header {
+      position: sticky;
+      top: 0;
+      z-index: 100;
+
       @include flex(row);
       align-items: center;
       justify-content: space-between;
 
-      margin-bottom: 20px;
 
       background-color: $white-400;
       box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
@@ -251,6 +261,12 @@
           }
         }
       }
+    }
+
+    .content {
+      overflow-y: auto;
+
+      padding-block: 20px 10px;
     }
   }
 }
