Refactor device list layout and add device status

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -11,6 +11,9 @@ $breakpoint-xxl: 1400px;
 
 $whatsapp-green: #25d366;
 
+$online-green: #00c853;
+$offline-red: #d50000;
+
 $white-100: #ffffff;
 $white-200: #fdfeff;
 $white-300: #fcfdff;
@@ -61,32 +64,32 @@ $skyblue-700: #1e8abf;
 $skyblue-800: #106b99;
 $skyblue-900: #0a4d73;
 
-$orangejam-100: #FDE3D0;
-$orangejam-200: #FBD1B9;
-$orangejam-300: #F9BF9F;
-$orangejam-400: #F7AD88;
-$orangejam-500: #ED7D31;
-$orangejam-600: #D66B2B;
-$orangejam-700: #C55925;
-$orangejam-800: #B4471F;
-$orangejam-900: #A33519;
+$orangejam-100: #fde3d0;
+$orangejam-200: #fbd1b9;
+$orangejam-300: #f9bf9f;
+$orangejam-400: #f7ad88;
+$orangejam-500: #ed7d31;
+$orangejam-600: #d66b2b;
+$orangejam-700: #c55925;
+$orangejam-800: #b4471f;
+$orangejam-900: #a33519;
 
-$info-yellow-100: #FFF8E5;
-$info-yellow-200: #FFF1CC;
-$info-yellow-300: #FFEAB2;
-$info-yellow-400: #FFE399;
-$info-yellow-500: #FFD66B;
-$info-yellow-600: #E6BF5F;
-$info-yellow-700: #CCAA53;
-$info-yellow-800: #B39747;
-$info-yellow-900: #99823B;
+$info-yellow-100: #fff8e5;
+$info-yellow-200: #fff1cc;
+$info-yellow-300: #ffeab2;
+$info-yellow-400: #ffe399;
+$info-yellow-500: #ffd66b;
+$info-yellow-600: #e6bf5f;
+$info-yellow-700: #ccaa53;
+$info-yellow-800: #b39747;
+$info-yellow-900: #99823b;
 
-$danger-red-100: #FFE5E5;
-$danger-red-200: #FFCCCC;
-$danger-red-300: #FFB2B2;
-$danger-red-400: #FF9999;
-$danger-red-500: #FF6666;
-$danger-red-600: #E65C5C;
-$danger-red-700: #CC5252;
-$danger-red-800: #B34747;
-$danger-red-900: #993D3D;
+$danger-red-100: #ffe5e5;
+$danger-red-200: #ffcccc;
+$danger-red-300: #ffb2b2;
+$danger-red-400: #ff9999;
+$danger-red-500: #ff6666;
+$danger-red-600: #e65c5c;
+$danger-red-700: #cc5252;
+$danger-red-800: #b34747;
+$danger-red-900: #993d3d;
