--- a/src/pages/admin/sections/SectionDeviceList/index.module.scss
+++ b/src/pages/admin/sections/SectionDeviceList/index.module.scss
@@ -65,7 +65,8 @@
   }
 
   .list {
-    @include grid(3, 1);
+    @include flex(row);
+    flex-wrap: wrap;
     gap: 20px;
 
     .deviceItem {
@@ -75,22 +76,57 @@
 
       gap: 40px;
       padding: 10px;
-      width: 100%;
+      width: 420px;
+      margin-top: 50px;
       // height: 600px;
 
       border-radius: 5px;
 
       background-color: $white-700;
 
-      .deviceLogo {
+      .deviceHeader {
         position: relative;
-        width: 200px;
-        height: 200px;
 
-        img {
-          width: 100%;
-          height: 100%;
-          object-fit: contain;
+        width: 100%;
+
+        .deviceLogo {
+          position: absolute;
+          top: -50px;
+          left: 50%;
+          transform: translateX(-50%);
+
+          width: 100px;
+          height: 100px;
+
+          border-radius: 50%;
+          border: 5px solid $white-700;
+          background-color: $white-100;
+
+          img {
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
+          }
+        }
+
+        .deviceStatus {
+          position: absolute;
+          top: 0;
+          right: 0;
+
+          width: 10px;
+          height: 10px;
+
+          border-radius: 50%;
+          background-color: transparent;
+
+          &[data-status="online"] {
+            background-color: $online-green;
+          }
+
+          &[data-status="offline"] {
+            background-color: $offline-red;
+          }
         }
       }
 
@@ -132,6 +168,7 @@
 
         .action {
           @include grid(2, 1);
+          grid-template-columns: 2fr 3fr;
           align-items: center;
           justify-content: flex-start;
 
